# delete-strapi-orders

./: .env.example  Cargo.toml
src/: main.rs
