[package]
name = "delete_customers_orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "futures-channel"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.70"
tokio = { version = "1.31.0", features = ["full"] }
futures = "0.3.28"
clap = { version = "4.3.21", features = ["derive"] }
dotenv = "0.15.0"
